03/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-flask
  labels:
    app: hello-world-flask
spec:
  template:
    metadata:
      labels:
        app: hello-world-flask
    spec:
      containers:
        - name: hello-world-flask
          image: huangxuantao/hello-world-flask
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
  selector:
    matchLabels:
      app: hello-world-flask
  replicas: 2
