03/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-flask
  labels:
    app: hello-world-flask
spec:
  type: ClusterIP
  ports:
    - name: 5000-5000
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: hello-world-flask
